<resources>
    <string name="app_name">DotExtras</string>
    <string name="recents_panel_title">Recents panel</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="immersive_recents_title">Immersive Recents</string>
    <string name="immersive_recents_summary">Change the view of the recents screen</string>
    <string name="immersive_recents_dialog_title">Select recents view</string>
    <string name="immersive_recents_default">Default</string>
    <string name="immersive_recents_fullscreen">Fullscreen</string>
    <string name="immersive_recents_statusbar">Statusbar only</string>
    <string name="immersive_recents_navbar">Navbar only</string>
    <string name="systemui_recents_mem_display_title">Show Memory Bar</string>
    <string name="systemui_recents_mem_display_summaryOn">RAM bar enabled</string>
    <string name="systemui_recents_mem_display_summaryOff">RAM bar disabled</string>
    <string name="volbtn_cursor_control_title">Volume key cursor control</string>
    <string name="volbtn_cursor_control_off">Disabled</string>
    <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_summary_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_summary_right">Right</string>
    <string name="status_bar_quick_qs_pulldown_off">Off</string>
    <string name="status_bar_quick_qs_pulldown_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_right">Right</string>
    <string name="status_bar_double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar to turn off the display</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="status_bar_clock_title">Clock</string>
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_brightness_category">Brightness</string>
    <string name="status_bar_brightness_slider_title">Brightness slider</string>
    <string name="status_bar_brightness_slider_summary">Adjust brightness from the Quick Settings</string>
    <string name="status_bar_brightness_slider_auto_title">Auto brightness</string>
    <string name="status_bar_brightness_slider_auto_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_icons_summary">Control which status bar icons are shown</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_hidearrow_title">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the traffic monitor activity arrows</string>
    <string name="sysui_qqs_count_title">Small QS tiles</string>
    <string name="qs_rows_portrait_title">No. of Rows (portrait)</string>
    <string name="qs_rows_landscape_title">No. of Rows (landscape)</string>
    <string name="qs_columns_title">No. of Columns</string>
    <string name="qs_columns_rows_title">Adjust the number of rows and columns</string>
    <string name="torch_long_press_power_gesture_title">Long-press power button for torch</string>
    <string name="torch_long_press_power_gesture_desc">Activate the torch by long-pressing the power button while the display is off</string>
    <string name="status_bar_header_title">Headers</string>
    <string name="status_bar_custom_header_title">Custom header image</string>
    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
    <string name="daylight_header_pack_title">Header image pack</string>
    <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="unit_percent">\u0025</string>
    <string name="static_header_provider" translatable="false">static</string>
    <string name="daylight_header_provider" translatable="false">daylight</string>
    <string name="static_header_provider_title">Static</string>
    <string name="daylight_header_provider_title">Dynamic</string>
    <string name="custom_header_provider_title">Header provider</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary">Long press on any image to use for static mode</string>
    <string name="disable_fc_notifications_title">Disable force close</string>
    <string name="disable_fc_notifications_summary">Hide all force close notification dialogs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_full_header">Set NavigationView size to fullscreen</string>
    <string name="nav_full_summary">Fullscreen NavView</string>
    <string name="sys_sucess">SystemUI Successfuly rebooted</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_manager_main">Droid Manager</string>
    <string name="hide_btn">Hide</string>
    <string name="show_btn">Show</string>
    <string name="main_title">Align The Dots</string>
    <string name="main_desc">Align the Dots properly, but the most important, align how you want</string>
    <string name="cm_title">Comunity Links</string>
    <string name="cm_desc">Check our DotOS Comunity Groups</string>
    <string name="git_desc">Download and try our source code</string>
    <string name="git_title">Github</string>
    <string name="tg_Desc">Stay up to date</string>
    <string name="tg_title">Telegram Comunity Group</string>
    <string name="app_pref">App Preferences</string>
    <string name="app_pref_desc">Customize Application Settings</string>
    <string name="phone_info">Phone info</string>
    <string name="android_ver">Android Version : </string>
    <string name="sdk_ver">SDK Version : </string>
    <string name="chipset">Chipset : </string>
    <string name="control_center">Control Center</string>
    <string name="prebuilt_profiles">Prebuilt Profiles</string>
    <string name="back">Back to Default</string>
	<string name="back_home">Back to Home</string>
    <string name="supercar">Like a V8 Supercar</string>
    <string name="lazy">A bit lazy but excelent lifetime</string>
    <string name="custom_profiles">Custom Profiles</string>
    <string name="wip">Work in Progress</string>
    <string name="dotos_ver">dotOS : </string>
    <string name="build_ver">Build Version : </string>
	<string name="dot_ver">Dot Version : </string>
	<string name="rom_check_msg">Please Install DotOS to use DotExtras</string>
    <string name="device">Device : </string>
	<string name="informations">Informations </string>
    <string name="cm_apt">Comunity and Aplication Theme</string>
	<string name="res_changer">Resolution Change</string>
    <string name="colors_header">Feel free to change the colors</string>
    <string name="app_theme">Set Application Theme</string>
    <string name="main">Main</string>
    <string name="home">Home</string>
    <string name="management">Management</string>
    <string name="system_manager">Droid Manager</string>
    <string name="tools">Tools</string>
    <string name="in_built_flasher">In-Built Flasher</string>
    <string name="extras">Extras</string>
    <string name="statusbar">Statusbar</string>
    <string name="buttons">Buttons</string>
    <string name="display">Display</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="recents">Recents</string>
    <string name="misc">Misc</string>
    <string name="powermenu">Powermenu</string>
    <string name="navigationbar">NavigationBar</string>
    <string name="support">Support</string>
    <string name="about_extras">About Extras</string>
    <string name="supported_devices">Supported Devices</string>
</resources>