<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Quick Settings">

     <PreferenceCategory
        android:title="@string/status_bar_brightness_category">

        <com.dotos.dotextras.preferences.SystemSettingSwitchPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/status_bar_brightness_slider_title"
            android:summary="@string/status_bar_brightness_slider_summary"
            android:defaultValue="true" />

        <com.dotos.dotextras.preferences.SystemSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/status_bar_brightness_slider_auto_title"
            android:summary="@string/status_bar_brightness_slider_auto_summary"
            android:dependency="qs_show_brightness_slider"
            lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
            android:defaultValue="true" />

        <com.dotos.dotextras.preferences.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

   <PreferenceCategory
        android:title="@string/qs_columns_rows_title">
    <ListPreference
        android:key="qs_rows_portrait"
        android:title="@string/qs_rows_portrait_title"
        android:entries="@array/qs_rows_portrait_entries"
        android:entryValues="@array/qs_rows_portrait_values" />

    <ListPreference
        android:key="qs_rows_landscape"
        android:title="@string/qs_rows_landscape_title"
        android:entries="@array/qs_rows_landscape_entries"
        android:entryValues="@array/qs_rows_landscape_values" />

    <ListPreference
        android:key="qs_columns"
        android:title="@string/qs_columns_title"
        android:entries="@array/qs_columns_entries"
        android:entryValues="@array/qs_columns_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_header_title">

        <com.dotos.dotextras.preferences.SystemSettingSwitchPreference
            android:key="status_bar_custom_header"
            android:title="@string/status_bar_custom_header_title"
            android:summary="@string/status_bar_custom_header_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="custom_header_provider"
            android:title="@string/custom_header_provider_title"
            android:persistent="false"
            android:entries="@array/custom_header_provider_entries"
            android:entryValues="@array/custom_header_provider_values"
            android:dependency="status_bar_custom_header" />

        <ListPreference
            android:key="daylight_header_pack"
            android:title="@string/daylight_header_pack_title"
            android:persistent="false"
            android:dependency="status_bar_custom_header" />

        <PreferenceScreen
            android:key="custom_header_browse"
            android:title="@string/custom_header_browse_title"
            android:summary="@string/custom_header_browse_summary"
            android:dependency="status_bar_custom_header"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.omnirom.omnistyle"
                    android:targetClass="org.omnirom.omnistyle.BrowseHeaderActivity" />
        </PreferenceScreen>

        <com.dotos.dotextras.preferences.SeekBarPreference
            android:key="status_bar_custom_header_shadow"
            android:title="@string/status_bar_custom_header_shadow_title"
            android:summary="@string/status_bar_custom_header_shadow_summary"
            android:max="255"
            settings:min="0"
            settings:units=""
            android:persistent="false"
            android:dependency="status_bar_custom_header" />
    </PreferenceCategory>

  </PreferenceCategory>
</PreferenceScreen>