<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
		  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
		  xmlns:cm="http://schemas.android.com/apk/res/cyanogenmod.platform">

    <PreferenceCategory android:title="Buttons">

    <ListPreference
        android:key="volume_key_cursor_control"
        android:dialogTitle="@string/volbtn_cursor_control_title"
        android:title="@string/volbtn_cursor_control_title"
        android:entries="@array/volbtn_cursor_control_entries"
        android:entryValues="@array/volbtn_cursor_control_values"
        android:persistent="false" />

    <com.dotos.dotextras.preferences.CMSystemSettingSwitchPreference
            android:key="torch_long_press_power_gesture"
            android:title="@string/torch_long_press_power_gesture_title"
            android:summary="@string/torch_long_press_power_gesture_desc"
            android:defaultValue="false"
            cm:requiresConfig="@*android:bool/config_supportLongPressPowerWhenNonInteractive" />
	
    </PreferenceCategory>
</PreferenceScreen>